<resources>
    <string name="app_name">OrniRec</string>
    <string name="title_home">Home</string>
    <string name="title_log">Log</string>
    <string name="title_profile">Profile</string>
    <string name="connect">Connect</string>
    <string name="logo_ornirec">Logo OrniRec</string>

    <string name="alt_threshold_button_plus">Increasing threshold of detected sound
        results button</string>
    <string name="alt_threshold_button_minus">Decreasing threshold of detected sound
        results button</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_max_results">Max results</string>
    <string name="label_overlap">Overlap</string>
    <string name="label_threads">Threads</string>

    <string-array name="overlap_spinner_titles">
        <item>0%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
    </string-array>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>NNAPI</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>